styles.css
body {
  margin: 0;
  text-align: center;
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 14px;
}

#header {
  position: fixed;
  top: 0;
  width: 100%;
  padding: 5px 10px 1px;
  background-color: #fff;
}

.shadow {
  box-shadow: 0 0 2px #d6d6d6;
}

#content {
  display: table;
  height: 100vh;
  padding-top: 48px;
  box-sizing: border-box;
}

.container {
  display: table-cell;
  vertical-align: top;
  box-sizing: border-box;
  padding: 20px;
}

.left {
  width: 23%;
}

.right {
  width: 23%;
}

.center {
  width: 54%;
  background-color: #f2eee8;
}

#profile {
  background-color: #81a9ca;
  color: #fff;
}

#profile .photo {
  margin: auto;
  width: 100px;
  height: 100px;
  background-size: cover;
  background-position: center;
  border: 2px solid #fff;
}

.photo {
  border-radius: 50%;
}

#profile #description {
  font-weight: 300;
}

#new-update {
  margin: auto;
  background-color: #fff;
  padding: 15px;
  text-align: right;
}

textarea {
  display: inline-block;
  width: 100%;
  padding: 2px;
  resize: vertical;
  box-sizing: border-box;
  border: 1px solid #fff;
  font-family: 'Scope One', serif;
  font-size: 14px;
  color: #b2b2b2;
  font-style: italic;
}

textarea:focus {
  border: 1px solid #f1f1f1;
  outline: none;
}

button {
  width: 50px;
  height: 32px;
  background-color: #fff;
  color: #b2b2b2;
  border: 1px solid #f1f1f1;
  font-family: 'Scope One', serif;
  font-size: 14px;
}

button:hover {
  color: #5a5a5a;
  border-color: #5a5a5a;
}

button:focus {
  outline: none;
  border-color: #b2b2b2;
}

#updates {
  margin-top: 20px;
  background-color: #fff;
}

.update {
  position: relative;
  padding: 20px;
  text-align: left;
  border-bottom: 1px solid #f1f1f1;
}

.update .photo {
  position: absolute;
  top: 20px;
  left: 20px;
  width: 40px;
  height: 40px;
}

.update .username {
  display: inline-block;
  float: left;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 55px;
}

.update .timestamp {
  display: inline-block;
  float: right;
  text-align: right;
  font-weight: 300;
  color: #d6d6d6;
}

.update .post {
  display: inline-block;
  box-sizing: border-box;
  width: 100%;
  margin-top: 5px;
  padding-left: 55px;
  padding-right: 15px;
  font-weight: 300;
}

h1 {
  margin: 0;
  font-size: 30px;
  font-family: 'Scope One', serif;
  color: #81a9ca;
}

h2 {
  margin: 15px;
  font-size: 18px;
}

p {
  margin: 0;
}

